# Powercode2

./: .gitignore  README.md
backend/: LICENSE.txt  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/challenges/python/capitalize-first-letter/: config.json  input.txt  output.txt
backend/app/challenges/python/check-character/: config.json  input.txt  output.txt
backend/app/challenges/python/contains-a/: config.json  input.txt  output.txt
backend/app/challenges/python/even-or-odd/: config.json  input.txt  output.txt
backend/app/challenges/python/greater-number/: config.json  input.txt  output.txt
backend/app/challenges/python/multiple-of-three/: config.json  input.txt  output.txt
backend/app/challenges/python/palindrome/: config.json  input.txt  output.txt
backend/app/challenges/python/power/: config.json  input.txt  output.txt
backend/app/challenges/python/sum-even/: config.json  input.txt  output.txt
backend/app/utils/: dockerize.py  exec.py  info.py
frontend/: README.md  package-lock.json
frontend/my-app/: .eslintignore  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  sampleData.jsonl  server.mjs  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/my-app/.vercel/: project.json
frontend/my-app/convex/: games.ts  players.ts  schema.ts  tasks.ts
frontend/my-app/convex/_generated/: api.d.ts
frontend/my-app/convex/functions/: createGame.js  submitCode.js
frontend/my-app/src/: App.tsx  TypingEffect.tsx  index.css  main.tsx
(+17 files in other folders)
