[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Paul Madut <paul.madut@mths.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = ">=0.114.2,<0.115.0", extras = ["standard"]}
gunicorn = "^23.0.0"
python-dotenv = ">=1.0.1,<1.1.0"
convex = ">=0.6.0,<0.7.0"
pydantic = ">=2.9.1,<2.10.0"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
